--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "SOAP request in NodeJS",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jenntenem/node-soap/issues"
   },
-  "homepage": "https://github.com/jenntenem/node-soap#readme"
+  "homepage": "https://github.com/jenntenem/node-soap#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "soap": "^1.0.0"
+  }
 }
